rust/herb-highlighter/tests/snapshots/diff_renderer_test__backgrounds_only_the_characters_that_changed_keeping_syntax_colors.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: result
---
[36m/test/file.erb[0m

[31m  - [0m[1m  2[0m [90m│[0m [48;2;58;34;36m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;58;34;36mspan[0m[48;2;58;34;36m [38;2;209;154;102mclass[0m[38;2;86;182;194m[48;2;58;34;36m=[0m[38;2;152;195;121m[48;2;107;46;49m'[0m[38;2;152;195;121m[48;2;58;34;36mcard[0m[38;2;152;195;121m[48;2;107;46;49m'[0m[38;2;224;108;117m[48;2;58;34;36m>[0m
[32m  + [0m    [90m│[0m [48;2;30;50;38m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;30;50;38mspan[0m[48;2;30;50;38m [38;2;209;154;102mclass[0m[38;2;86;182;194m[48;2;30;50;38m=[0m[38;2;152;195;121m[48;2;46;94;61m"[0m[38;2;152;195;121m[48;2;30;50;38mcard[0m[38;2;152;195;121m[48;2;46;94;61m"[0m[38;2;224;108;117m[48;2;30;50;38m>[0m
        [90m│[0m [90m⋮[0m
[31m  - [0m[1m  5[0m [90m│[0m [48;2;58;34;36m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;58;34;36mimg[0m[48;2;58;34;36m [38;2;209;154;102msrc[0m[38;2;86;182;194m[48;2;58;34;36m=[0m[38;2;152;195;121m[48;2;58;34;36m"[0m[38;2;152;195;121m[48;2;58;34;36ma[0m[38;2;171;178;191m[48;2;58;34;36m.[0m[38;2;152;195;121m[48;2;58;34;36mpng[0m[38;2;152;195;121m[48;2;58;34;36m"[0m[38;2;224;108;117m[48;2;58;34;36m>[0m
[32m  + [0m    [90m│[0m [48;2;30;50;38m  [38;2;224;108;117m<[0m[38;2;224;108;117m[48;2;30;50;38mimg[0m[48;2;30;50;38m [38;2;209;154;102msrc[0m[38;2;86;182;194m[48;2;30;50;38m=[0m[38;2;152;195;121m[48;2;30;50;38m"[0m[38;2;152;195;121m[48;2;30;50;38ma[0m[38;2;171;178;191m[48;2;30;50;38m.[0m[38;2;152;195;121m[48;2;30;50;38mpng[0m[38;2;152;195;121m[48;2;30;50;38m"[0m[48;2;46;94;61m [38;2;209;154;102malt[0m[38;2;86;182;194m[48;2;46;94;61m=[0m[38;2;152;195;121m[48;2;46;94;61m"[0m[38;2;152;195;121m[48;2;46;94;61m"[0m[38;2;224;108;117m[48;2;30;50;38m>[0m
