rust/herb-highlighter/tests/snapshots/diff_renderer_test__collapses_an_isolated_one_for_one_replacement_onto_a_single_line.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
      1 │ <div>
  ±   2 │   <span class='a'"a">one</span>
      3 │   <p>untouched</p>
