rust/herb-highlighter/tests/snapshots/diff_renderer_test__collapses_inline_without_diff_backgrounds.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: result
---
    [90m  1[0m [90m│[0m [2;31m[2m<[22m[0m[2;31m[2mdiv[22m[0m[2m [22m[2;38;2;209;154;102m[2mid[22m[0m[2;34m[2m=[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;38;2;152;195;121m[2mgems[22m[0m[2;38;2;152;195;121m[2m"[22m[0m[2;31m[2m>[22m[0m
[31m  - [0m[1m  2[0m [90m│[0m   [31m<[0m[31mspan[0m [38;2;209;154;102mclass[0m[34m=[0m[38;2;152;195;121m'[0m[38;2;152;195;121mcard[0m[38;2;152;195;121m'[0m[31m>[0m[37mx[0m[31m</[0m[31mspan[0m[31m>[0m
[32m  + [0m    [90m│[0m   [31m<[0m[31mspan[0m [38;2;209;154;102mclass[0m[34m=[0m[38;2;152;195;121m"[0m[38;2;152;195;121mcard[0m[38;2;152;195;121m"[0m[31m>[0m[37mx[0m[31m</[0m[31mspan[0m[31m>[0m
    [90m  3[0m [90m│[0m [2m  [22m[2;31m[2m<[22m[0m[2;31m[2mp[22m[0m[2;31m[2m>[22m[0m[2;37m[2mkeep[22m[0m[2;31m[2m</[22m[0m[2;31m[2mp[22m[0m[2;31m[2m>[22m[0m
