rust/herb-highlighter/tests/snapshots/diff_renderer_test__falls_back_to_splitting_when_color_is_off.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: result
---
      1 │ <div>
  -   2 │   <span class='a'>one</span>
  +     │   <span class="a">one</span>
      3 │   <p>untouched</p>
