rust/herb-highlighter/tests/snapshots/diff_renderer_test__indents_the_whole_diff_for_nesting_under_an_offense.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
        -   2 │   <span class='card'>
        +     │   <span class="card">
              │ ⋮
        -   5 │   <img src="a.png">
        +     │   <img src="a.png" alt="">
