rust/herb-highlighter/tests/snapshots/diff_renderer_test__keeps_context_numbering_monotonic_when_the_fix_changes_the_line_count.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ <div>
      2 │   <span>one</span>
  +     │   <span>two</span>
      3 │ </div>
