rust/herb-highlighter/tests/snapshots/diff_renderer_test__leaves_the_shorter_side_blank_when_the_two_runs_differ_in_length.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: result
---
  -   2 │   <span>x</span>                                           ┃   +   2 │   <section>
        │                                                            ┃   +   3 │     <span>x</span>
        │                                                            ┃   +   4 │   </section>
