rust/herb-highlighter/tests/snapshots/diff_renderer_test__marks_the_inserted_indentation_when_a_block_is_reindented_line_for_line.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

  -   2 │ <span>one</span>
  -   3 │ <span>two</span>
  +     │   <span>one</span>
  +     │   <span>two</span>
