rust/herb-highlighter/tests/snapshots/diff_renderer_test__omits_the_header_and_gutter_when_line_numbers_are_hidden.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
  <div id="gems">
-   <span class='card'>
+   <span class="card">
      <%= render partial: "gem_card" %>
    </span>
-   <img src="a.png">
+   <img src="a.png" alt="">
  </div>
