rust/herb-highlighter/tests/snapshots/diff_renderer_test__puts_the_original_on_the_left_and_the_modified_on_the_right.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
      1 │ <div id="gems">                                            ┃       1 │ <div id="gems">
  -   2 │   <span class='card'>                                      ┃   +   2 │   <span class="card">
      3 │     <%= render partial: "gem_card" %>                      ┃       3 │     <%= render partial: "gem_card" %>
      4 │   </span>                                                  ┃       4 │   </span>
  -   5 │   <img src="a.png">                                        ┃   +   5 │   <img src="a.png" alt="">
      6 │ </div>                                                     ┃       6 │ </div>
