rust/herb-highlighter/tests/snapshots/diff_renderer_test__renders_hunks_that_arrived_without_their_sources.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: strip_ansi_colors(&result)
---
/test/file.erb

      1 │ <div id="gems">
  -   2 │   <span class='card'>
  +     │   <span class="card">
      3 │     <%= render partial: "gem_card" %>
      4 │   </span>
  -   5 │   <img src="a.png">
  +     │   <img src="a.png" alt="">
      6 │ </div>
