rust/herb-highlighter/tests/snapshots/diff_renderer_test__renders_the_diff_without_any_escape_codes_when_color_is_off.snap
---
source: herb-highlighter/tests/diff_renderer_test.rs
expression: result
---
/test/file.erb

      1 │ <div id="gems">
  -   2 │   <span class='card'>
  +     │   <span class="card">
      3 │     <%= render partial: "gem_card" %>
      4 │   </span>
  -   5 │   <img src="a.png">
  +     │   <img src="a.png" alt="">
      6 │ </div>
